--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
 					I help my clients to refocus from difficult situations in their life and go towards their potential and start exploring its true nature.
-					To become creating their own synchronicities and manifest quicker whatever they desire.</p>
-				<p>
-					<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
+					To become creating their own synchronicities and manifest quicker whatever they desire.
+				
+				<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
 					YouTube: I share examples of my work and researches</a><br>
 					<!--<a class="fa-brands fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank" style="float: left; color: blue;">
 					Facebook<br>
@@ -157,13 +157,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					
 				</p>	
                <div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
-				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">I am Accredited Elite Life Coach, Level 5, Certified by the IAPC&M</p>
-				<a href="https://coach-accreditation.services/" target="_blank">
-					<img src="images/IAPCM-Logo-_2020-update-RGB-web-large.png" alt="" width="300" height="300">
-				</a>
-				<a href="https://www.evolvelifecoachingcollege.com/" target="_blank">
-					<img src="images/EvolveLogo.jpg" alt="Girl in a jacket" width="210">
+				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">
+				I am Registered (<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>)<br/> 
+				Hypnotherapist accredited by the GHSC and<br/>
+				Accredited Practitioner Coach by the IAPC&M
+				</p>
+				<a href="https://general-hypnotherapy-register.com/" target="_blank">
+					<img src="images/ghsc_accrediter.png" alt="Girl in a jacket" width="210">
 				</a>				
+				<a href="https://coach-accreditation.services/" target="_blank">
+					<img src="images/IAPCM-Logo.png" alt="" width="300" height="300">
+				</a>
               </div>
             </div>
           </div>
