--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 		  
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?name=dna&id=6">
+			    <a href="blog/dna.html">
                 <div class="team-classic-img"><img src="images/blog/dna.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -53,7 +53,7 @@
             </div>			  
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?name=synchronicity&id=5">
+			    <a href="blog/synchronicity.html">
                 <div class="team-classic-img"><img src="images/blog/synchronicity.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -71,7 +71,7 @@
             </div>		  
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?name=higher_dimension&id=3">
+			    <a href="blog/higher_dimension.html">
                 <div class="team-classic-img"><img src="images/blog/higher_dimension.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -89,7 +89,7 @@
             </div>				
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?name=schumann_resonance&id=2">
+			    <a href="blog/schumann_resonance.html">
                 <div class="team-classic-img"><img src="images/blog/schumann_resonance.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -107,7 +107,7 @@
             </div>	
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?name=seeing_others&id=1">
+			    <a href="blog/seeing_others.html">
                 <div class="team-classic-img"><img src="images/blog/seeing_others.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
@@ -125,7 +125,7 @@
             </div>
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blogPage.html?name=angels&id=4">
+			    <a href="blog/angels.html">
                 <div class="team-classic-img"><img src="images/blog/angels.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
