--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
 					I help my clients to refocus from difficult situations in their life and go towards their potential and start exploring its true nature.
-					To become creating their own synchronicities and manifest quicker whatever they desire.
+					To start creating their own synchronicities and manifest quicker whatever they desire.
 				
 				<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
 					YouTube: I share examples of my work and researches</a><br>
