--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
-					I help my clients to refocus from difficult situations in their life and go towards their potential and start exploring its true nature.
+					I help my clients to refocus from difficult situations in their lives by going towards their potential and exploring its true nature.
 					To start creating their own synchronicities and manifest quicker whatever they desire.
 				
 				<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
