--- a/index.html
+++ b/index.html
@@ -150,22 +150,20 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					To start creating their own synchronicities and manifest quicker whatever they desire.
 				
 				<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
-					YouTube: I share examples of my work and researches</a><br>
-					<!--<a class="fa-brands fa-facebook" href="https://www.facebook.com/choosefrequency" target="_blank" style="float: left; color: blue;">
-					Facebook<br>
-					<a class="fa-brands fa-instagram" href="https://www.instagram.com/choosefrequency/" target="_blank" style="float: left; color: darkmagenta;"> Instagram</a> -->
-					
+					YouTube: examples of my work</a><br>
 				</p>	
                <div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">
-				I am Registered (<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>)<br/> 
-				Hypnotherapist accredited by the GHSC and<br/>
-				Accredited Practitioner Coach by the IAPC&M
+				I am Registered <br/>
+				Hypnotherapist accredited by the GHSC<br/>
+				(<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>) and<br/> 
+				Accredited Practitioner Coach by the IAPC&M <br/>
+				(<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">Coach & Mentor Directories</a>)<br/>
 				</p>
 				<a href="https://general-hypnotherapy-register.com/" target="_blank">
 					<img src="images/ghsc_accrediter.png" alt="Girl in a jacket" width="210">
 				</a>				
-				<a href="https://coach-accreditation.services/" target="_blank">
+				<a href="https://coach-accreditation.services/view/coach-mentor-profile/entry/2528/" target="_blank">
 					<img src="images/IAPCM-Logo.png" alt="" width="300" height="300">
 				</a>
               </div>
