--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
 						</span>
 					</div>
 					<h5>3 techniques to see synchronicities.</h5>
-					<p>Who would not want to be able to create their opportunities, their ways of faith unfolding? You can do it. But first, you need to see it at least. Most people do not understand that the law of attraction is about opportunities, possibilities, and nudges. Your higher self presents it for you on your behalf until ...</p>
+					<p>Who would not want to be able to create their opportunities, their ways of faith unfolding? You can do it. But first, you need to see it at least. Most people do not understand that the law of attraction is about opportunities, possibilities, and nudges. Your higher self creates it for you on your behalf until ...</p>
 				</div>	
 				</a>
               </div>
