--- a/index.html
+++ b/index.html
@@ -149,10 +149,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					I help my clients to refocus from difficult situations in their lives by going towards their potential and exploring its true nature.
 					To start creating their own synchronicities and manifest quicker whatever they desire.
 				
-				<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
-					YouTube: examples of my work</a><br>
+
 				</p>	
-               <div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
+<!--				<a id="youtubechannel" class="fa-brands fa-youtube-play" href="https://www.youtube.com/@choosefrequency" target="_blank" style="float: left; color: red;">
+					YouTube: examples of my work</a><br>-->
+			<div align="right"><a class="button-width-190 button-primary button-circle button-lg button offset-top-20 block-center" href="about.html">read more</a></div>
 				<p class="default-letter-spacing font-weight-bold text-gray-dark wow fadeInUp" data-wow-delay=".4s">
 				I am Registered <br/>
 				Hypnotherapist accredited by the GHSC<br/>
