--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned eventually, how to turn them to my benefit. 
-					How to transmute pain into creativity and grow at my own pace towards wherever my imagination can take me.   
+					How to transmute pain into creativity and grow at my own pace toward wherever my imagination can take me.   
 					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
