--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				Hypnotherapist accredited by the GHSC<br/>
 				(<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">General Hypnotherapy Register</a>) and<br/> 
 				Accredited Practitioner Coach by the IAPC&M <br/>
-				(<a href="https://general-hypnotherapy-register.com/malgorzata-witkowska/" target="_blank">Coach & Mentor Directories</a>)<br/>
+				(<a href="https://coach-accreditation.services/view/coach-mentor-profile/entry/2528/" target="_blank">Coach & Mentor Directories</a>)<br/>
 				</p>
 				<a href="https://general-hypnotherapy-register.com/" target="_blank">
 					<img src="images/ghsc_accrediter.png" alt="Girl in a jacket" width="210">
