--- a/index.html
+++ b/index.html
@@ -141,13 +141,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 				</h3>
                <p class="offset-xl-40 wow fadeInUp" data-wow-delay=".4s">
 					I started the journey of life with a lot of obstacles to overcome. 
-					And I learned eventually, how to turn them to my benefit. 
+					And I learned, eventually, how to turn them to my benefit. 
 					How to transmute pain into creativity and grow at my own pace toward wherever my imagination can take me.   
-					I am certain that I am on my way to ascension and my guides want me to take as many people as possible with me to the Earth of the new frequency.  
 					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
 					I help my clients to refocus from difficult situations in their lives by going towards their potential and exploring its true nature.
-					To start creating their own synchronicities and manifest quicker whatever they desire.
+					To start creating their synchronicities and manifest quicker whatever they desire. 
+		       			I show people how to merge with their higher-self by raising vibrations and tapping into their abilities. 
 				
 
 				</p>	
