--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 		  
 			<div class="col-xl-4 col-sm-6 col-10 wow fadeInLeft" data-wow-delay=".3s">
               <div class="blog-wrap team-classic-wrap">
-			    <a href="blog/ascension.html"> 
+			    <a href="blog/ascension_to_higher_dimension.html"> 
                 <div class="team-classic-img"><img src="images/blog/ascension.jpg" alt="" width="370" height="198"/>
                 </div>
 				<div class="blog-title-wrap">
