--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
 						</span>
 					</div>
 					<h5>How to create a new dimension</h5>
-					<p>The main aim of this whole process is to make you self-aware and conscious. Ascending, moving energetically to a different dimension, starting with changing your mindset, can get much easier if you connect with a higher consciousness for guidelines.All this process is for only one reason...</p>
+					<p>Please remember that we are creators only when we do not copy what is already there. Each of us has a choice to make. Either follow the crowd or create the one by giving birth to something people can follow. Knowing that they will not listen to something they already know, you must be unique ...</p>
 				</div>	
 				</a>
               </div>
