--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,8 @@
 						</span>
 					</div>
 					<h5>Making your intuition lauder</h5>
-					<p>Please remember that we are creators only when we do not copy what is already there. Each of us has a choice to make. Either follow the crowd or create the one by giving birth to something people can follow. Knowing that they will not listen to something they already know, you must be unique ...</p>
+					<p>Nature decided to equip us with another sense. Intuition. Instant knowing is based on connecting known facts and general knowledge, which leads to feeling situations instead of just observing them. It is like a muscle. Has to be trained. It is worth knowing what gifts come with it and how to master them.</p>
+
 				</div>	
 				</a>
               </div>
