--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="main-decorated-box text-center text-xl-left">
 				  <div class="rd-navbar-brand">
 					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/>
-					<span class="prefix-text text-white big font-weight-bold offset-top-30">Hypnotherapy and Spiritual Life Coaching</span></a>
+					<span class="prefix-text text-white big font-weight-bold offset-top-30">Hypnotherapy and Synchronicity Life Coaching</span></a>
 				  </div>
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
 				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
@@ -143,7 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned, eventually, how to turn them to my benefit. 
 					How to transmute pain into creativity and grow at my own pace toward wherever my imagination can take me.   
-					I have become a <span class="default-letter-spacing font-weight-bold ">spiritual life coach</span>. I help people who are going through an awakening, which 
+					I have become a <span class="default-letter-spacing font-weight-bold ">Synchronicities Creation Coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
 					I help my clients to refocus from difficult situations in their lives by going towards their potential and exploring its true nature.
 					To start creating their synchronicities and manifest quicker whatever they desire. 
