--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-NXSPV35');</script>
 	<!-- End Google Tag Manager -->
-    <title>Choose Frequency - Hypnotherapy and Spiritual Life Coaching</title>
+    <title>Choose Frequency - Synchronicities Creation & Hypnosis</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta class="metaTagTop" name="keywords" content="healing, hypnosis, Hypnotherapy, tarot, spirituality">
+	<meta class="metaTagTop" name="keywords" content="healing, hypnosis, Hypnotherapy, tarot, spirituality, synchronicity">
 	<meta class="metaTagTop" name="author" content="Gosia Witkowska">
     <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
@@ -85,7 +85,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <div class="main-decorated-box text-center text-xl-left">
 				  <div class="rd-navbar-brand">
 					<!--Brand--><a href="index.html"><img class="brand-logo-dark" src="images/CF_LogoCircle.png" alt="" style="width:100%; height:auto; max-width:40px;"/>
-					<span class="prefix-text text-white big font-weight-bold offset-top-30">Hypnotherapy and Synchronicity Life Coaching</span></a>
+					<span class="prefix-text text-white big font-weight-bold offset-top-30">Synchronicities Creation & Hypnosis</span></a>
 				  </div>
                 <h1 class="text-white text-xl-center wow slideInRight" data-wow-delay=".3s"><span class="align-top offset-top-30 d-inline-block font-weight-light prefix-text">Choose</span>
 				<span class="big font-weight-bold d-inline-flex offset-right-170">your</span><span class="biggest d-block d-xl-flex font-weight-bold">frequency</span></h1>
