--- a/books.html
+++ b/books.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="../images/CF_LogoCircle.png" type="image/x-icon">
-	<link rel="stylesheet" type="text/css" href="../fonts/fontMonterrat.css">
+    <link rel="icon" href="images/CF_LogoCircle.png" type="image/x-icon">
+	<link rel="stylesheet" type="text/css" href="fonts/fontMonterrat.css">
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
@@ -123,7 +123,7 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	<script src='https://www.google.com/recaptcha/api.js'></script>
 	<script src='https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js'></script>
-	<script src="book_reg.js"></script>
+	<script src="js/book_reg.js"></script>
 	<script src="js/loadEssencials.js"></script>
     <script src="js/core.min.js"></script>
     <script src="js/script.js"></script>
