--- a/books.html
+++ b/books.html
@@ -21,8 +21,8 @@
 	  <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.bootstrapvalidator/0.5.0/js/bootstrapValidator.min.js"></script>
  	 <script src="https://www.paypal.com/sdk/js?client-id=AcNvlQlQ58A_8dZ-OIUNhg4WnTiNdW3gHDwKYjBPItA5KFvsnztF4JK1EEIz9_aHWQzygVQJcq0aNNX0&currency=GBP" data-sdk-integration-source="button-factory"></script>	  
 
-	<meta property="og:image" content="https://www.choosefrequency.com/images/books/book01_Christmas.jpg">
-	<meta property="og:title" content='"Create your synchronicities." (Free Gift)'>
+	<meta property="og:image" content="https://www.choosefrequency.com/images/books/book01_Christmas02.jpg">
+	<meta property="og:title" content='e-Book: "Create your synchronicities." (Free Gift)'>
   </head>
   <body id="bookings">
     <div class="ie-panel"><a href="http://windows.microsoft.com/en-US/internet-explorer/"><img src="images/ie8-panel/warning_bar_0000_us.jpg" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
