--- a/books.html
+++ b/books.html
@@ -34,12 +34,12 @@
         <div class="container">
           <!--RD Mailform-->
           <div class="row justify-content-center">
-            <div class="col-xl-6 col-md-8 col-12">
+            <div class="col-xl-10 col-md-10 col-12">
 
 				<div class="row">
 					<div class="col-lg-6 book_img">
 						<div class="team-classic-wrap">
-							<div class="team-classic-img"><img src="images/books/book01.jpg" alt=""/></div>
+							<img src="images/books/book01_mockups.png" alt=""/>
 						</div>
 					</div>
 					<div class="col-lg-6">
@@ -55,6 +55,8 @@
 							<div class="form-button group-sm text-center text-lg-left">
 								<button class="button button-primary" type="submit" value="Submit" id="submit">Send Book</button>
 							</div>
+							
+							
 						</form>
 						<div id="sending-spinner" class="cssload-speeding-wheel" style="display: none"></div>
 						<div id="success-box" style="display: none;"><h3>The link has been sent. Please check your spam and promotions folders.</h3></div>
