--- a/books.html
+++ b/books.html
@@ -71,6 +71,15 @@
 						<p> &nbsp; &nbsp; &nbsp; Synchronicities let you design and set new boards for the games of your design where only your imagination can limit you. Seeing all around you as an energy, you can shape it into what only comes to your mind. Making people play roles you assign to them and letting you enjoy your new experiences, allowing it to entertain you and teach you the necessary skills to build more advanced strategies later on. </p>
 						<p> &nbsp; &nbsp; &nbsp;Remembering the main rule not to harm any energy and contribute to the Collective of your choice to enrich its frequency and your potential to access higher levels of Consciousness. Increasing your abilities and opportunities might look like a goal until you understand that it has a different meaning. Uniting in Oneness to share knowledge and experience to make the observing process more intricate and advanced. Seeing yourself as a part of something which wanted to see it all from many perspectives and fragmented itself to give itself that option. It crated you, and all there is from itself to have pawns to play.  </p>
 						<p> &nbsp; &nbsp; &nbsp; It might sound cruel, but only for those who do not want to see more. They will never be ready to do what needs to take place. We are not meant to find out what that more is but to create it. To understand that evolution never was, it is. To use its power, and with your imagination, show the universe something it has never seen before. We are just entertainers to ourselves." [...]</p>
+						<br/>
+						<p>Powerful content:</p>
+						<p>1. Things to remember using the Law of Attraction</p>
+						<p>2. Powers that make us divine beings</p>
+						<p>3. Techniques to see synchronicities</p>
+						<p>4. Angelic intervention in your synchronicities</p>
+						<p>5. Becoming a new human species. Ways to activate DNA</p>
+						<p>6. Ascension to the higher dimension to set synchronicities</p>
+						<p>7. vWhat higher dimension comes with</p>
 					</div>
 				
 				</div>
