--- a/books.html
+++ b/books.html
@@ -72,7 +72,7 @@
 						<p> &nbsp; &nbsp; &nbsp;Remembering the main rule not to harm any energy and contribute to the Collective of your choice to enrich its frequency and your potential to access higher levels of Consciousness. Increasing your abilities and opportunities might look like a goal until you understand that it has a different meaning. Uniting in Oneness to share knowledge and experience to make the observing process more intricate and advanced. Seeing yourself as a part of something which wanted to see it all from many perspectives and fragmented itself to give itself that option. It crated you, and all there is from itself to have pawns to play.  </p>
 						<p> &nbsp; &nbsp; &nbsp; It might sound cruel, but only for those who do not want to see more. They will never be ready to do what needs to take place. We are not meant to find out what that more is but to create it. To understand that evolution never was, it is. To use its power, and with your imagination, show the universe something it has never seen before. We are just entertainers to ourselves." [...]</p>
 						<br/>
-						<p>Powerful content:</p>
+						<p><h4>Powerful content:</h4></p>
 						<p>1. Things to remember using the Law of Attraction</p>
 						<p>2. Powers that make us divine beings</p>
 						<p>3. Techniques to see synchronicities</p>
