--- a/books.html
+++ b/books.html
@@ -79,7 +79,7 @@
 						<p>4. Angelic intervention in your synchronicities</p>
 						<p>5. Becoming a new human species. Ways to activate DNA</p>
 						<p>6. Ascension to the higher dimension to set synchronicities</p>
-						<p>7. vWhat higher dimension comes with</p>
+						<p>7. What higher dimension comes with</p>
 					</div>
 				
 				</div>
