--- a/test.html
+++ b/test.html
@@ -101,6 +101,7 @@
 	<script src='https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js'></script>
 	<script src="https://smtpjs.com/v3/smtp.js"></script>
 
+    <script src="bundle.js"></script>
 	<script src="js/test.js"></script>
 	<script src="js/loadEssencials.js"></script>
     <script src="js/core.min.js"></script>
