--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
 
   	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="js/bundle.js"></script>
+	<script src="js/ElasticEmailClient.js"></script>
 
 	<meta property="og:image" content="https://www.choosefrequency.com/images/books/book01_Christmas02.jpg">
 	<meta property="og:title" content='e-Book: "Create your synchronicities" (Free Gift)'>
