--- a/test.html
+++ b/test.html
@@ -13,8 +13,7 @@
 	<style>.ie-panel{display: none;background: #212121;padding: 10px 0;box-shadow: 3px 3px 5px 0 rgba(0,0,0,.3);clear: both;text-align:center;position: relative;z-index: 1;} html.ie-10 .ie-panel, html.lt-ie-10 .ie-panel {display: block;}</style>
 
   	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <!--<script src="js/bundle.js"></script>-->
-	<script src="js/ElasticEmailClient.js"></script>
+    <script src="js/bundle.js"></script>
 
 	<meta property="og:image" content="https://www.choosefrequency.com/images/books/book01_Christmas02.jpg">
 	<meta property="og:title" content='e-Book: "Create your synchronicities" (Free Gift)'>
