--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 					I started the journey of life with a lot of obstacles to overcome. 
 					And I learned, eventually, how to turn them to my benefit. 
 					How to transmute pain into creativity and grow at my own pace toward wherever my imagination can take me.   
-					I have become a <span class="default-letter-spacing font-weight-bold ">Synchronicities Creation Coach</span>. I help people who are going through an awakening, which 
+					I have become a <span class="default-letter-spacing font-weight-bold ">Synchronicities Creation Coach and Narcissism Relief Coach</span>. I help people who are going through an awakening, which 
 					might have been triggered by painful experiences or developed naturally. 
 					I help my clients to refocus from difficult situations in their lives by going towards their potential and exploring its true nature.
 					To start creating their synchronicities and manifest quicker whatever they desire. 
