--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="pricing-box-tittle">Starter</div>
                 <p>Initial session 30 min</p>
                 <hr/>
-                <div class="pricing-box-inner"><span class="pricing-box-symbol"></span><span class="pricing-box-price">Free</span></div>
+                <div class="pricing-box-inner"><span class="pricing-box-symbol">£</span><span class="pricing-box-price">10</span></div>
                 <div class="pricing-box-label bg-gray">once</div>
                 <p>Verifying goals <br> Setting Up Strategy <br> Zoom meeting</p>
 				<a class="button button-190 button-circle btn-primary-rounded" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/starter'});return false;">book</a>
