--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,8 @@
 						</span>
 					</div>
 					<h5>Narcissism creates spirit guides</h5>
-					<p>When you awaken this lifetime, you will gain spiritual powers, abilities you cannot access while asleep. I talk extensively about them on my YouTube channel, blogs or classes and how your frequency builds their strength. But I did not mention yet how to trigger their birth. <span class="special-text">Spiritual awakening</span> is the only way. </p>
+					<p>Helping other survivors is a fantastic purpose. I hope you see it too. But there is something better for those who want to play this game on a higher level. Spirit guides are entities who lead, help, and rescue. But not people with empathy as these can do it themselves. They aim for narcissists, and they want to recruit you to help them. </br>
+</p>
 
 				</div>	
 				</a>
