--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -54,9 +54,11 @@
 					<hr>
 					<a href="https://idillionaire.com/blog/believe-in-the-power-of-your-imagination.html" target="_blank">Believe In The Power Of Your Imagination</a> </br>
 					<hr>
-					<a href="https://www.facebook.com/reel/1375631153342986" target="_blank">Be a part on One ... Experience </a>
-					<hr>						
-					<a href="https://www.youtube.com/watch?v=5LNDHvi_YGo" target="_blank">RETURN to ONENESS | 963 Hz Frequency of Gods</a>
+					<a href="https://www.youtube.com/shorts/cnsPg7tFxRE" target="_blank">Harness the Power of Imagination</a>
+					<hr>			
+					<a href="https://www.facebook.com/reel/906962097466382" target="_blank">Choose Frequency: Change your reality</a>
+					<hr>
+					<a href="https://www.youtube.com/watch?v=VKI605D0apc" target="_blank">Unleash Your Creativity | 396 Hz Healing Frequency Music</a>
 					</p>
 				</div>	
               </div>
