--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -59,7 +59,7 @@
 					<hr>			
 					<a href="https://www.facebook.com/reel/906962097466382" target="_blank">Choose Frequency: Change your reality</a>
 					<hr>
-					<a href="https://www.youtube.com/watch?v=VKI605D0apc" target="_blank">Unleash Your Creativity | 396 Hz Healing Frequency Music</a>
+					<a href="https://www.youtube.com/watch?v=r6IURwLzTX4&t=206s" target="_blank">Quantum Creativity - Increase Creativity and Imagination</a>
 					</p>
 				</div>	
               </div>
