--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -47,7 +47,7 @@
 					<p>
 					<a href="https://www.linkedin.com/pulse/empathy-act-imagination-doc-ayomide-adebayo/" target="_blank">Empathy is an act of imagination</a>
 					<hr>
-					<a href="https://www.youtube.com/watch?v=Dge7-8m0phg" target="_blank">Imagination, Dreams and Empathy With Ed Finn</a>
+					<a href="https://www.youtube.com/watch?v=Dge7-8m0phg" target="_blank">Ed Finn: Imagination, Dreams and Empathy</a>
 					<hr>
 					<a href="https://www.lynnebaab.com/blog/creativity-imagination-and-empathy" target="_blank">Creativity, imagination and empathy</a>
 					<a href="https://blog.mindvalley.com/cognitive-empathy/" target="_blank">Types of Empathy</a>
@@ -56,7 +56,7 @@
 					<hr>
 					<a href="https://idillionaire.com/blog/believe-in-the-power-of-your-imagination.html" target="_blank">Believe In The Power Of Your Imagination</a> </br>
 					<hr>
-					<a href="https://www.youtube.com/shorts/cnsPg7tFxRE" target="_blank">Harness the Power of Imagination</a>
+					<a href="https://www.youtube.com/shorts/cnsPg7tFxRE" target="_blank">Brian Scott: Harness the Power of Imagination</a>
 					<hr>			
 					<a href="https://www.facebook.com/reel/906962097466382" target="_blank">Choose Frequency: Change your reality</a>
 					<hr>
