--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -49,7 +49,7 @@
 					<hr>
 					<a href="https://www.youtube.com/watch?v=Dge7-8m0phg" target="_blank">Ed Finn: Imagination, Dreams and Empathy</a>
 					<hr>
-					<a href="https://www.lynnebaab.com/blog/creativity-imagination-and-empathy" target="_blank">Creativity, imagination and empathy</a>
+					<a href="https://www.lynnebaab.com/blog/creativity-imagination-and-empathy" target="_blank">Creativity, imagination and empathy</a></br>
 					<a href="https://blog.mindvalley.com/cognitive-empathy/" target="_blank">Types of Empathy</a>
 					<hr>
 					<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8047060/" target="_blank">Cognitive Empathy as Imagination</a>
