--- a/about.html
+++ b/about.html
@@ -113,6 +113,17 @@
             </div>
             <div class="col-xl-3 col-sm-6 col-10 wow fadeInRight" data-wow-delay=".3s">
               <div class="team-classic-wrap">
+                <div class="team-classic-img"><img src="images/hamilton.jpg" alt="" width="370" height="198"/>
+                </div>
+                <div class="block-320 text-center">
+                  <h4 class="font-weight-bold">Dr David R Hamilton</h4><a href="https://drdavidhamilton.com/" target="_blank">www.drdavidhamilton.com/</a>
+                  <p>Scientist, PhD in organic chemistry.</p>
+                  <hr class="offset-top-40"/>
+                </div>
+              </div>
+            </div>			
+            <div class="col-xl-3 col-sm-6 col-10 wow fadeInRight" data-wow-delay=".3s">
+              <div class="team-classic-wrap">
                 <div class="team-classic-img"><img src="images/DrShaminiJain.jpg" alt="" width="370" height="198"/>
                 </div>
                 <div class="block-320 text-center">
