--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -47,7 +47,7 @@
 					<p>
 					<a href="https://youtube.com/clip/UgkxAdubQmh_UA0UfDJrBtp4ZUZ0dtrPS6Ps?si=li3cPxvlaWdDOsQ3" target="_blank">Anybody you want me to be</a>
 					<hr>
-					<a href="images/blog/narcTypes.png" target="_blank">Narcissism Types</a>
+					<a href="images/blog/narcTypes.png" target="_blank">Narcissism Types</a></br>
 					<a href="https://www.psychologytoday.com/gb/blog/finding-a-new-home/202202/what-new-research-is-telling-us-about-narcissism" target="_blank">Narcissism Types II</a>
 					<hr>
 					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0191886918304756" target="_blank">Narcissism and Trust</a></br>
