--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -52,7 +52,7 @@
 					<hr>
 					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0191886918304756" target="_blank">Narcissism and Trust</a></br>
 					<hr>
-					<a href="https://youtube.com/clip/UgkxyDadE-XZk6zXXp_gKUQB5R3OdvTibSIw?si=qDE51h8v5I4RypLd" target="_blank">dr Les Carter: Cognitive Empathy as Imagination</a>
+					<a href="https://youtube.com/clip/UgkxyDadE-XZk6zXXp_gKUQB5R3OdvTibSIw?si=qDE51h8v5I4RypLd" target="_blank">dr Les Carter: My way or not at all</a>
 					<hr>
 					<a href="https://youtube.com/clip/UgkxMOHxQ7k2kCwVva3UzQ-OnV_fYTTLiDpr?si=09PzxK5BYFXGGP3E" target="_blank">dr Les Carter: Can not trust people who are different</a> </br>
 					<hr>
