--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 		<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/experience'});return false;">book</a>
               </div>
             </div>
-	    <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
+	   <!-- <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
                 <div class="pricing-box-tittle">Tarot</div>
                 <p>Tarot Reading session 60 min</p>
@@ -287,7 +287,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <p> Talking with your spirit guides <br> Searching spiritual guidelines <br> Zoom meeting</p>
 		<a class="button button-190 button-circle btn-rounded-outline" href="" onclick="Calendly.initPopupWidget({url: 'https://calendly.com/choosefrequency/tarot-reading'});return false;">book</a>
               </div>
-            </div>
+            </div>-->
 	    <div class="col-xl-4 col-md-6 col-12 wow fadeInUp" data-wow-delay=".4s">
               <div class="pricing-box bg-gray-primary">
                 <div class="pricing-box-tittle">MeetUp</div>
@@ -295,10 +295,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-price">Free</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">each session</div>
-                <p> Talking with your spirit guides <br> Searching spiritual guidelines <br> MeetUp meetings</p>
-		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/choosefrequency/">synchronicities</a></br>
+		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/choosefrequency/">synchronicities</a></br></br>
 		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/narcissism-relief/">narcissism</a>
-		      
               </div>
             </div>	  
            <!--<div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
