--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <hr/>
                 <div class="pricing-box-inner"><span class="pricing-box-price">Free</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">each session</div>
+		<p> MeetUp/Zoom meeting</p>
 		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/choosefrequency/">synchronicities</a></br></br>
 		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/narcissism-relief/">narcissism</a>
               </div>
