--- a/index.html
+++ b/index.html
@@ -296,8 +296,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="pricing-box-inner"><span class="pricing-box-price">Free</span></div>
                 <div class="pricing-box-label bg-gray-primary-light">each session</div>
 		<p> MeetUp/Zoom meeting</p>
-		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/choosefrequency/">synchronicities</a></br></br>
-		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/narcissism-relief/">narcissism</a>
+		      
+		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/choosefrequency/" target="_blank">synchronicities</a></br></br>
+		<a class="button button-190 button-circle btn-rounded-outline" href="https://www.meetup.com/narcissism-relief/" target="_blank">narcissism</a>
               </div>
             </div>	  
            <!--<div class="col-xl-4 col-md-6 col-12 wow fadeInDown" data-wow-delay=".3s">
