--- a/sessionsNarcissism.html
+++ b/sessionsNarcissism.html
@@ -45,22 +45,21 @@
 					</div>
 					<h5>Recovery</h5>
 					<p>
-					<a href="https://youtube.com/clip/UgkxAdubQmh_UA0UfDJrBtp4ZUZ0dtrPS6Ps?si=li3cPxvlaWdDOsQ3" target="_blank">Anybody you want me to be</a>
+					<a href="https://www.dukehealth.org/blog/9-signs-of-narcissistic-personality-disorder" target="_blank">Important questions</a>
 					<hr>
-					<a href="images/blog/narcTypes.png" target="_blank">Narcissism Types</a></br>
-					<a href="https://www.psychologytoday.com/gb/blog/finding-a-new-home/202202/what-new-research-is-telling-us-about-narcissism" target="_blank">Narcissism Types II</a>
+					<a href="https://www.choosingtherapy.com/narcissistic-rage/" target="_blank">Narcissistic Rage. What to do?</a></br>
 					<hr>
-					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0191886918304756" target="_blank">Narcissism and Trust</a></br>
+					<a href="https://www.businessinsider.com/how-to-stop-argument-with-narcissist-2018-2?r=US&IR=T" target="_blank">How to stop an argument with a narcissist</a></br>
 					<hr>
-					<a href="https://youtube.com/clip/UgkxyDadE-XZk6zXXp_gKUQB5R3OdvTibSIw?si=qDE51h8v5I4RypLd" target="_blank">dr Les Carter: My way or you are against me</a>
+					<a href="https://psychcentral.com/disorders/what-is-healthy-narcissism#healthy-vs-pathological-narcissism" target="_blank">Healthy Narcissism</a>
 					<hr>
-					<a href="https://youtube.com/clip/UgkxMOHxQ7k2kCwVva3UzQ-OnV_fYTTLiDpr?si=09PzxK5BYFXGGP3E" target="_blank">dr Les Carter: Can not trust people who are different</a> </br>
+					<a href="https://youtube.com/clip/UgkxFXn-Kb3uN2AQSxDk9wp5l-SLEkFYAFYF?si=EvziIwAglWNLnI6j" target="_blank">Frank Yeomans: The Range of Narcissism: Healthy to NPD</a>
 					<hr>
-					<a href="https://www.youtube.com/shorts/fMIbkbkk0lQ" target="_blank">NLP - narcissists love learning</a>
+					<a href="https://childrenofnarcissists.org.uk/healthy-narcissism-vs-unhealthy-narcissism/" target="_blank">Healthy Narcissism Vs. Unhealthy Narcissism</a> </br>
+					<hr>
+					<a href="https://www.youtube.com/watch?v=Y1yvxKu-mOE" target="_blank">Diana Diamond: The Arc of Successful Treatment of Pathological Narcissism</a>
 					<hr>			
-					<a href="https://www.verywellmind.com/can-a-narcissist-love-7112051" target="_blank">Can they love</a>
-					<hr>
-					<a href="https://www.youtube.com/watch?v=r6IURwLzTX4&t=206s" target="_blank">Quantum Creativity - Increase Creativity and Imagination</a>
+					<a href="https://marriagerecoverycenter.com/assertive-vs-aggressive-people/#:~:text=Narcissists%2C%20despite%20their%20dominating%20tendencies,in%20their%20interactions%20with%20others." target="_blank">Assertivness as a medicine</a>
 					</p>
 				</div>	
               </div>
@@ -83,7 +82,7 @@
 					<a href="images/blog/narcTypes.png" target="_blank">Narcissism Types</a></br>
 					<a href="https://www.psychologytoday.com/gb/blog/finding-a-new-home/202202/what-new-research-is-telling-us-about-narcissism" target="_blank">Narcissism Types II</a>
 					<hr>
-					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0191886918304756" target="_blank">Narcissism and Trust</a></br>
+					<a href="https://www.youtube.com/watch?v=2B0qwlFAYbY" target="_blank">Narcissism and Trust</a></br>
 					<hr>
 					<a href="https://youtube.com/clip/UgkxyDadE-XZk6zXXp_gKUQB5R3OdvTibSIw?si=qDE51h8v5I4RypLd" target="_blank">dr Les Carter: My way or you are against me</a>
 					<hr>
